src/objects/appsolutely__Additional_Information_NL_Financial_Item__c.object
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationNLFinancialItemV2</description>
    <fields>
        <fullName>appsolutely__Consolidated_Subsidiaries__c</fullName>
        <description>The number of consolidated subsidiaries.</description>
        <label>Consolidated Subsidiaries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Additional Information NL Financial Item</relationshipLabel>
        <relationshipName>Additional_Information_NL_Financial_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Date_Year_End__c</fullName>
        <description>The end date of the financial period that the accounts relate to.</description>
        <label>Date Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>appsolutely__Judgement__c</fullName>
        <description>The auditing judgement (have the accounts been approved?).</description>
        <label>Judgement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Additional Information NL Financial Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Additional Information NL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Information NL Financial Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>